--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,32 @@
 /* Descriptive colors */
 /* Color usage */
 .svgLogoText {
-  fill: #172323; }
+  fill: #3A3326; }
 
 .home-content h1 {
-  color: #172323 !important; }
+  color: #3A3326 !important; }
 
 .navbar-default .navbar-toggle {
   border-color: transparent;
-  background: #172323 !important; }
+  background: #3A3326 !important; }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-  background: #172323 !important; }
+  background: #3A3326 !important; }
 
 .navbar-default .navbar-nav > li > a:hover {
   color: #fff;
-  background: #172323 !important; }
+  background: #3A3326 !important; }
 
 .boxed-icon .icon {
-  color: #172323 !important;
+  color: #3A3326 !important;
   font-size: 1.5rem; }
 
 .boxed-icon {
-  border: solid 2px #172323 !important; }
+  border: solid 2px #3A3326 !important; }
 
 .treatments .icon {
   font-size: 1.5rem;
-  color: #172323; }
+  color: #3A3326; }
 
 .team {
   overflow: hidden;
@@ -35,19 +35,19 @@
 
 .team .expandable-box-top {
   padding: 20px;
-  background: #172323 !important; }
+  background: #3A3326 !important; }
 
 .team .expandable-box {
-  border-right: solid 1px #172323 !important; }
+  border-right: solid 1px #3A3326 !important; }
 
 .expandable-box-bottom a:last-child, .expandable-box-bottom span:last-child {
-  background: #172323 !important; }
+  background: #3A3326 !important; }
 
 .expandable-box-bottom a:first-child, .expandable-box-bottom span:first-child {
-  background: #172323 !important; }
+  background: #3A3326 !important; }
 
 .main-footer {
-  background: #172323 !important; }
+  background: #3A3326 !important; }
 
 .testimonials .overlay-container .overlay {
   position: absolute;
@@ -59,7 +59,7 @@
   background: rgba(245, 242, 0, 0.5); }
 
 .three-shade-col [class^="col-"]:nth-child(1) {
-  background: #172323 !important; }
+  background: #3A3326 !important; }
 
 .three-shade-col [class^="col-"]:nth-child(2) {
   background: #675E4F !important; }
@@ -68,30 +68,30 @@
   background: #9C907A !important; }
 
 .three-shade-col [class^="col-"]:nth-child(4) {
-  background: #172323 !important; }
+  background: #3A3326 !important; }
 
 .btn-success {
   color: #fff;
-  background-color: #172323;
+  background-color: #3A3326;
   border-color: #675E4F; }
 
 .btn-success:focus,
 .btn-success.focus {
   color: #fff;
-  background-color: #172323;
+  background-color: #3A3326;
   border-color: #675E4F; }
 
 .btn-success:hover {
   color: #fff;
   background-color: #675E4F;
-  border-color: #172323; }
+  border-color: #3A3326; }
 
 .main .icon {
   margin-right: 10px;
-  color: #172323;
+  color: #3A3326;
   vertical-align: top; }
 
 .userEL427543 hr {
   border: 0;
-  border-top: 10px solid #172323;
+  border-top: 10px solid #3A3326;
   height: 1px; }
